<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_height="match_parent"
    android:layout_width="match_parent">

    <LinearLayout  android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">


        <TextView
            android:layout_width="match_parent"
            android:layout_height="100dp"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:textStyle="bold"
            android:textColor="#FFFFFF"
            android:text="@string/title"
            android:gravity="center_vertical"
            android:padding="16dp"
            android:background="#3F51B5"
            android:id="@+id/titleTextView"
            android:layout_gravity="center_horizontal" />

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="16dp"
            android:weightSum="2">


            <ImageView
                android:layout_width="0dp"
                android:adjustViewBounds="true"
                android:layout_height="wrap_content"
                android:contentDescription="@string/posterImageConDes"
                android:id="@+id/posterImageView"
                android:layout_weight="1" />

            <LinearLayout
                android:orientation="vertical"
                android:layout_width="0dp"
                android:padding="8dp"
                android:layout_height="wrap_content"
                android:layout_weight="1">


                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textAppearance="?android:attr/textAppearanceMedium"
                    android:text="@string/releaseDate"
                    android:id="@+id/releaseDateTextView" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textAppearance="?android:attr/textAppearanceMedium"
                    android:text="@string/ratings"
                    android:id="@+id/ratingTextView" />
            </LinearLayout>
        </LinearLayout>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="16dp"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="@string/overview"
            android:id="@+id/overviewTextView" />
    </LinearLayout>

</ScrollView>
